# empty-cpp-project

./: .gitignore  CMakeLists.txt
cmake/: CompileOptions.cmake
